data/derived/sp14/progs/unify/prog0438.ml.out
Characters 40-54:
  float_of_string(exprToString e * x * y);;
                  ^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
